# rfs

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  EVALUATOR_MANUAL.ja.md  README.ja.md  README.md  docker-compose.evaluator.yml  docker-compose.linux.yml  docker-compose.yml  run_learning.sh
dev/: generate-image.js
docker/: .env.example  audio_bridge.py  audio_client.html  audio_overlay.js  entrypoint.sh
docs/simulation/: index.html  simulation.js  style.css
src/rfs_bringup/: CMakeLists.txt  package.xml
src/rfs_bringup/launch/: rfs_all.launch.py
src/rfs_config/: CMakeLists.txt  package.xml
src/rfs_config/config/: config.json  voice_list.txt
src/rfs_database/: evaluation_history.csv  faces_iv_tables.md  glass_castle_analysis.md
src/rfs_database/archive/20260202_142032/: evaluation_history.csv
src/rfs_database/archive/20260202_142851/: conversation_history.txt
src/rfs_database/archive/20260202_164126/: evaluation_history.csv
src/rfs_database/archive/20260202_165552/: evaluation_history.csv
src/rfs_database/archive/20260202_185656/: evaluation_history.csv
src/rfs_evaluation/: package.xml  setup.cfg  setup.py
src/rfs_evaluation/rfs_evaluation/: rfs_evaluation.py
src/rfs_evaluator_app/: app.py  package.xml  setup.cfg  setup.py
src/rfs_evaluator_app/rfs_evaluator_app/: app.py
src/rfs_evaluator_app/static/: app.js  style.css
src/rfs_evaluator_app/templates/: index.html
src/rfs_family/: package.xml  setup.cfg  setup.py
src/rfs_family/rfs_family/: rfs_document_processor.py  rfs_family_member.py  rfs_generator.py  rfs_member_evaluator.py
src/rfs_interfaces/: CMakeLists.txt  package.xml
src/rfs_interfaces/srv/: TTSService.srv
src/rfs_stt/: package.xml  setup.cfg  setup.py
src/rfs_stt/rfs_stt/: rfs_stt.py
src/rfs_therapist/: package.xml  setup.cfg  setup.py
src/rfs_therapist/rfs_therapist/: rfs_evaluator.py  rfs_optimizer.py  rfs_therapist.py
src/rfs_toio/: package.xml  setup.cfg  setup.py
src/rfs_toio/rfs_toio/: rfs_toio.py  toio_speaker_match.py
src/rfs_tts/: package.xml  setup.cfg  setup.py
src/rfs_tts/rfs_tts/: rfs_tts.py
src/rfs_viewer/: package.xml  setup.cfg  setup.py
src/rfs_viewer/rfs_viewer/: rfs_viewer.py
(+28 files in other folders)
